--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  html {
+    scrollbar-width: normal;
+    scrollbar-color: #777 #555;
+    scroll-behavior: smooth;
+  }
+  
+  html::-webkit-scrollbar {
+    width: 1vw;
+  }
+  
+  html::-webkit-scrollbar-thumb {
+    background-color: #7775;
+  }
+  
+  html::-webkit-scrollbar-thumb:hover {
+    background-color: #777;
+  }
+  
+  html::-webkit-scrollbar-track {
+    background-color: #5555;
+  }
+  
+  html::-webkit-scrollbar-track:hover {
+    background-color: #555;
+  }
+  
