--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,29 +9,13 @@
     box-sizing: border-box;
   }
   
-  html {
-    scrollbar-width: normal;
-    scrollbar-color: #777 #555;
-    scroll-behavior: smooth;
+  ::-webkit-scrollbar{
+    width: 6px;
+    background-color: #ffffff;
+    height: 4px;
   }
   
-  html::-webkit-scrollbar {
-    width: 1vw;
-  }
-  
-  html::-webkit-scrollbar-thumb {
-    background-color: #7775;
-  }
-  
-  html::-webkit-scrollbar-thumb:hover {
-    background-color: #777;
-  }
-  
-  html::-webkit-scrollbar-track {
-    background-color: #5555;
-  }
-  
-  html::-webkit-scrollbar-track:hover {
-    background-color: #555;
+  ::-webkit-scrollbar-thumb{
+    background-color: #808080;
   }
   
